debut design front, modif swagger pour get all cars
