# backend/src/main/resources/openapi/swagger.yaml
@@ -114,6 +114,33 @@ paths:
         required: true
         type: "string"
         format: "uuid"
+  /voiture/gellAll/{userId}:
+    get:
+      tags:
+      - "voiture"
+      summary: "Trouver toute les voitures"
+      description: "Returns all cars"
+      operationId: "getCarsByUserId"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Voiture"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Car not found"
+    parameters:
+      - name: "userId"
+        in: "path"
+        description: "User id"
+        required: true
+        type: "string"
+        format: "uuid"
 definitions:
   Voiture:
     type: "object"
@@ -137,3 +164,7 @@ definitions:
       prixVenteEstimee:
         type: "integer"
         example: "15000"
+      userId:
+        type: "string"
+        format: "uuid"
+        example: "0000-0000"
